primitives/npos-elections/compact/tests/ui/fail/missing_accuracy.stderr
error: Expected binding: `Accuracy = ...`
 --> $DIR/missing_accuracy.rs:6:2
  |
6 |     Perbill,
  |     ^^^^^^^
